@@ -18,10 +18,10 @@ AC_CONFIG_HEADER([config.h])
 #
 GWENHYWFAR_VERSION_MAJOR=1
 GWENHYWFAR_VERSION_MINOR=9
-GWENHYWFAR_VERSION_PATCHLEVEL=0
-GWENHYWFAR_VERSION_BUILD=10
+GWENHYWFAR_VERSION_PATCHLEVEL=10
+GWENHYWFAR_VERSION_BUILD=0
 dnl "stable", "rcX", "betaX", "cvs"
-GWENHYWFAR_VERSION_TAG="cvs"
+GWENHYWFAR_VERSION_TAG="stable"
 GWENHYWFAR_VERSION_FULL_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL.$GWENHYWFAR_VERSION_BUILD${GWENHYWFAR_VERSION_TAG}"
 GWENHYWFAR_VERSION_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL"
 
@@ -30,9 +30,9 @@ GWENHYWFAR_VERSION_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$
 #
 # SO version for Gwenhywfar
 #
-GWENHYWFAR_SO_CURRENT="26"
+GWENHYWFAR_SO_CURRENT="27"
 GWENHYWFAR_SO_REVISION="0"
-GWENHYWFAR_SO_AGE="9"
+GWENHYWFAR_SO_AGE="10"
 GWENHYWFAR_SO_EFFECTIVE="`echo \$(($GWENHYWFAR_SO_CURRENT-$GWENHYWFAR_SO_AGE))`"
 
 
